# route96

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.arm64  GitVersion.yml  IMPLEMENTATION_SUMMARY.md  README.md  config.prod.toml  config.prod.yaml  config.toml  config.yaml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  grafana.json  index.html
.github/workflows/: compliance.yml  docker-publish.yml  docker.yml  publish-and-release.yml
deployment/: manifests.yaml
deployment/route96/: Chart.yaml  values.yaml
deployment/route96/templates/: config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  sealed-secret.yaml  service.yaml
docs/: SKILL.md  admin-api.md  debian.md
migrations/: 20240428220811_init.sql  20240514150647_user_files.sql  20240529112336_upload_labels.sql  20240908152548_alt.sql  20241004152857_admin.sql  20250115200151_report.sql  20250127210244_video_metadata.sql  20250202135844_payments.sql  20250310000000_h_tag.sql  20250327150000_admin_default.sql  20250610135841_reports.sql  20250610140000_add_reviewed_flag.sql  20260304000000_moderation.sql  20260304000003_label_index.sql  20260305000000_labeled_by_table.sql  20260305100000_query_optimizations.sql  20260305200000_phash.sql  20260311000000_file_stats.sql  20260311100000_whitelist.sql  20260312000000_config.sql  20260313000000_label_models.sql  20260407000000_add_uploads_created_index.sql
scripts/: README.md  allowed_pubkeys.txt  blossom_delete_file.sh  blossom_get_file.sh  blossom_lifecycle_demo.sh  blossom_list_files.sh  blossom_upload.sh  check_access.sh
src/: auth.rs  blob.rs  comma_separated.rs  config_watcher.rs  cors.rs  db.rs  db_config.rs  exif_validator.rs  file_stats.rs  filesystem.rs  lib.rs  main.rs  nip29.rs  payments.rs  phash.rs  response_log.rs  routes.rs  settings.rs  steganography_detector.rs  void_db.rs  void_file.rs  webhook.rs  whitelist.rs
src/analytics/: mod.rs  plausible.rs
src/auth/: blossom.rs  mod.rs  nip98.rs
src/background/: delete_unaccessed.rs  file_deleter.rs  label_files.rs  media_metadata.rs  mod.rs  payments.rs  phash_files.rs
src/processing/: blurhash.rs  image.rs  labeling.rs  mod.rs  probe.rs  webp.rs
src/routes/: admin.rs  blossom.rs  mod.rs  nip96.rs  payment.rs
ui/: index.html
ui_src/: .env.development  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui_src/src/: App.tsx  const.ts  index.css  login.ts  main.tsx
ui_src/src/components/: background-progress.tsx  button.tsx  config-editor.tsx  create-account.tsx  file-list-controls.tsx  label-management.tsx  login-dialog.tsx  manual-mirror.tsx  mirror-suggestions.tsx  payment.tsx  profile.tsx  progress-bar.tsx  server-config.tsx  stats.tsx
ui_src/src/hooks/: login.ts  publisher.ts  use-blossom-servers.ts
ui_src/src/upload/: admin.ts  blossom.ts  index.ts  nip96.ts  progress.ts
ui_src/src/views/: admin.tsx  files.tsx  header.tsx  reports.tsx  setup.tsx  tos.tsx  upload.tsx  user-scope.tsx
